tests/ui/traits/const-traits/const-trait-async-assoc-fn.stderr
error: async functions are not allowed in `const` traits
  --> $DIR/const-trait-async-assoc-fn.rs:5:5
   |
LL | const trait Tr {
   | ----- associated functions of `const` cannot be declared `async`
LL |     async fn ft1() {}
   |     ^^^^^

error: aborting due to 1 previous error

